--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,2 +1,9 @@
-<h1>Welcome#home</h1>
-<p>Find me in app/views/welcome/home.html.erb</p>
+<h1>Welcome To Vegan-Options!</h1>
+<p>Veganism often gets a bad wrap, but what it comes  down to is that is one of the most  effective lifestyle changes an individual can make to reduce their impact on the environment. As an added  bonus, a plant-based diet also mitigates many of the health issues resulting  from the conventional-modern American diet. Although the vegan diet is becoming more widespread, it can still be difficult to  find restaurants with  vegan options, especially in some regions of the United States. This app will house a user generated list of vegan-friendly restaurants organized by state. </p>
+
+<%= link_to 'Login', login_path %>
+<br>
+<br>
+<%= link_to 'Signup', signup_path %>
+
+
