added restaurant count to state index and added new form and action  for restaurants

--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -1,5 +1,5 @@
 <ul>
 <%= @states.each do |state| %>
-    <li><%= state.name %></li>
+    <li><%= state.name %> - <%= state.restaurants.count %> Restaurants </li>
 <% end %>
 </ul>
