--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -9,7 +9,7 @@
     <div class="form-group">
       <%= f.label :description, "Description:" %>
       <br>
-      <%= f.number_field :description, class: "form-control" %>
+      <%= f.text_field :description, class: "form-control" %>
     </div>
   
     <div class="form-group">
@@ -27,13 +27,14 @@
     <div class="form-group">
       <%= f.label :vegan_friendliness_rating, "Vegan Friendliness Rating (1-10):" %>
       <br>
-      <%= f.password_field :vegan_friendliness_rating, class: "form-control" %>
+      <%= f.number_field :vegan_friendliness_rating, min: 0, max:10, class: "form-control" %>
     </div>
+
 
     <div class="form-group">
       <%= f.label :price_rating, "Price Rating (1-5):" %>
       <br>
-      <%= f.password_field :price_rating, class: "form-control" %>
+      <%= f.number_field :price_rating, min: 0, max: 5, class: "form-control" %>
     </div>
   
     <div class="actions">
