--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,7 +9,7 @@
     <div class="form-group">
       <%= f.label :first_name, "First Name:" %>
       <br>
-      <%= f.number_field :first_name, class: "form-control" %>
+      <%= f.text_field :first_name, class: "form-control" %>
     </div>
   
     <div class="form-group">
@@ -25,9 +25,9 @@
     </div>
   
     <div class="form-group">
-      <%= f.label :password, "Password:" %>
+      <%= f.label :password_digest, "Password:" %>
       <br>
-      <%= f.password_field :password, class: "form-control" %>
+      <%= f.password_field :password_digest, class: "form-control" %>
     </div>
   
     <div class="actions">
