--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -25,9 +25,9 @@
     </div>
   
     <div class="form-group">
-      <%= f.label :password_digest, "Password:" %>
+      <%= f.label :password, "Password:" %>
       <br>
-      <%= f.password_field :password_digest, class: "form-control" %>
+      <%= f.password_field :password, class: "form-control" %>
     </div>
   
     <div class="actions">
