fixed routes and got nested states- restaurants index working and worked on  restaurant show page

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,7 @@
 <ul>
 <%= @restaurants.each do |restaurant| %>
     <% if restaurant.state_id == restaurant.state.id %>  
-        <li><%= restaurant.name %></li> 
+        <li><%= link_to restaurant.name, restaurant_path(restaurant) %></li> 
     <% end %>
 <% end %> 
  
