--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,1 +1,10 @@
-<%= @restaurant.name %>
+<h1><%= @restaurant.name %></h1>
+<p>Description: <%= @restaurant.description %></p>
+<p>Address: <%= @restaurant.address %></p> 
+<p>Phone Number: <%= @restaurant.phone_number %></p>
+<p>Vegan Friendliness Rating: <%= @restaurant.vegan_friendliness_rating %></p>
+<p>Price Rating: <%= @restaurant.price_rating %></p>
+
+<br> 
+<br> 
+<%= link_to 'List of States', states_path %> 
