--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @restaurant do |f| %>
+<%= form_for @restaurant do |f| %> 
   
     <div class="form-group">
       <%= f.label :name, "Name:" %>
@@ -45,7 +45,7 @@
   
     <div class="actions">
       <br/>
-      <%= f.submit class: "btn btn-primary" %>
+      <%= f.submit 'Create Restaurant', class: "btn btn-primary" %>
     </div>
   
 <% end %> 
