--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -27,9 +27,9 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
+         <li><%= link_to "Sign Up", new_user_path %></li>
+         <li><%= link_to "Sign In", signin_path %></li>
          <li><%= link_to "Log Out", logout_path %></li>
-         <li><%= link_to "List of States", states_path %></li>
-         <li><%= link_to "Create Restaurant", restaurants_new_path %></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
