--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -7,4 +7,6 @@
 
 <br> 
 <br> 
-<%= link_to 'List of States', states_path %> 
+<%= link_to 'My Profile', user_path(@restaurant.user_id) %>
+
+<%# if @restaurant.user_id == current_user.id, then display option to edit restaurant %>
