--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -1,3 +1,4 @@
+<h1> States Index </h1>
 <ul>
 <%= @states.each do |state| %>
     <li><%= link_to state.name, state_restaurants_path(state) %> - <%= state.restaurants.count %> Restaurants </li>
