--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,10 @@
-<%= @user.username %>
-<br> 
-<br>
-<%=  link_to 'Create Restaurant', restaurants_new_path %>
-<br> 
-<br>
-<%= link_to 'List of States', states_path %>
-<br> 
-<br>
-<%= link_to 'Logout', logout_path %>
+<h3><%= @user.username %></h3>
 
-<%# want to remove links and have them in the layouts header %>
-
-<%# changed new_restaurant_path to new_state_restaurant on line 4 %>
+<% if @user.restaurants.any? %>
+    <ul>
+    <%= @user.restaurants.each do |restaurant| %>
+        <li><%= link_to restaurant.name, restaurant_path(restaurant) %></li>
+    <% end %> 
+    </ul>
+<% end %> 
+ 
