--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,12 +1,23 @@
 <h1><%= @restaurant.name %></h1>
 <p>Description: <%= @restaurant.description %></p>
 <p>Address: <%= @restaurant.address %></p> 
+<p>State: <%= @restaurant.state.name %></p>
 <p>Phone Number: <%= @restaurant.phone_number %></p>
 <p>Vegan Friendliness Rating: <%= @restaurant.vegan_friendliness_rating %></p>
 <p>Price Rating: <%= @restaurant.price_rating %></p>
 
+<% if @restaurant.user_id == current_user.id %> <%# !!! NOT WORKING !!! %>
+    <p><%= link_to "Edit Restaurant", edit_restaurant_path(@restaurant) %></p>
+    <p><%= link_to "Delete Restaurant", delete_restaurant_path(@restaurant) %></p>
+<% end %>
 <br> 
 <br> 
 <%= link_to 'My Profile', user_path(@restaurant.user_id) %>
 
-<%# if @restaurant.user_id == current_user.id, then display option to edit restaurant %>
+<%# if @restaurant.user_id == current_user.id, then display option to edit or delete restaurant ---- why is this not working above?? %>
+<%# for some reason the relationship between User and Restaurant isn't direct, it is reading the has_many_through relationship with inner join on Reviews %>
+
+<h3>Reviews (<%= @restaurant.reviews.size %>):</h3> 
+<%= render partial: 'restaurants/review', collection: @restaurant.reviews.reverse %>
+
+<%= render partial: 'reviews/form', locals: { reivew: @review } %>
