--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -8,4 +8,4 @@
 </ul>
 
 
-!!! need to work on this one 
+<%# !!! need to work on this one -- if there  are not restaurants for that state, say no restaurant submissions yet and link_to create new restaurant %>
