--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -6,13 +6,13 @@
 <p>Vegan Friendliness Rating: <%= @restaurant.vegan_friendliness_rating %></p>
 <p>Price Rating: <%= @restaurant.price_rating %></p>
 
+
 <% if @restaurant.user_id == current_user.id %> <%# !!! NOT WORKING !!! %>
     <p><%= link_to "Edit Restaurant", edit_restaurant_path(@restaurant) %></p>
-    <p><%= link_to "Delete Restaurant", delete_restaurant_path(@restaurant) %></p>
 <% end %>
 <br> 
 <br> 
-<%= link_to 'My Profile', user_path(@restaurant.user_id) %>
+<%= link_to 'My Profile', user_path(current_user) %>
 
 <%# if @restaurant.user_id == current_user.id, then display option to edit or delete restaurant ---- why is this not working above?? %>
 <%# for some reason the relationship between User and Restaurant isn't direct, it is reading the has_many_through relationship with inner join on Reviews %>
