--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<h3>Post a Review, <%= @restaurant.user.username %>:</h3>
+<h3>Post a Review, <%= current_user.username %>:</h3>
 
 <%= form_for [ @restaurant, @review ] do |f| %>
 
