--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,6 +1,9 @@
+<% if @restaurant.id == review.restaurant_id %>
+
 <h3>Post a Review, <%= current_user.username %>:</h3>
 
-<%= form_for [ @restaurant, @review ] do |f| %>
+
+<%= form_for [ @restaurant, review ] do |f| %>
 
     <p>
       <%= f.text_area :body %>
@@ -10,4 +13,5 @@
     <p>
       <%= f.submit 'Submit' %>
     </p>
+<% end %>
 <% end %>
