added error messages to restaurant new

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,13 +23,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-      <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
+
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
          <li><%= link_to "Log Out", logout_path %></li>
          <li><%= link_to "List of States", states_path %></li>
-         <li><%= link_to "Create Restaurant", restaurants_new_path %></li>
+         <li><%= link_to "Create Restaurant", new_restaurant_path %></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
