--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
+        <li><%= link_to  "Profile", user_path(current_user) %></li>
          <li><%= link_to "Log Out", logout_path %></li>
          <li><%= link_to "List of States", states_path %></li>
          <li><%= link_to "Create Restaurant", new_restaurant_path %></li>
