--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,8 @@
 <p>Username: <%=@user.username %></p>
 <p>Email: <%= @user.email %></p>
 
-<%# THIS FEATURE NOT WORKING %>
-<% if @user.id == @restaurant.user_id %>   <%# seems to only work when user has submitted review on the restaurant %>
+
+<% if @restaurant.user_id == @user.id %>   
 <h3> Your Restaurant Submissions: </h3>
     <ul>
     <%= @user.restaurants.each do |restaurant| %>
@@ -12,3 +12,4 @@
     </ul>
 <% end %> 
  
+<%# for some reason the relationship between User and Restaurant isn't direct, it is reading the has_many_through relationship with inner join on Reviews %>
