--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -1,5 +1,18 @@
-<h1> Editing: <%= @restaurant.name %> </h1>
 <%= form_for @restaurant do |f| %> 
+
+    <% if @restaurant.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@restaurant.errors.count, "error") %> prohibited this restaurant from being saved:
+      </h2>
+
+      <ul>
+      <% @restaurant.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
   
     <div class="form-group">
       <%= f.label :name, "Name:" %>
