--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -1,45 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Vegan Options</title>
+    <title>VeganOptions</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= csrf_meta_tags %>
-    <%= analytics_init if Rails.env.production? %>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"></link>
   </head>
 
   <body>
-  <!--  navbar -->
-  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        
+    <% flash.each do |type, msg| %>
+      <div id="flash">
+        <%= msg %>
       </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-         <li><%= link_to "Sign Up", new_user_path %></li>
-         <li><%= link_to "Sign In", signin_path %></li>
-         <li><%= link_to "Log Out", logout_path %></li>
-        </ul>
-      </div><!--/.nav-collapse -->
-    </div>
-  </div>
+    <% end %>
 
-  <!-- content -->
-  <div class="container"  role="main">
-    <%= alert %><br><br>
+    <div class="nav">
+        <br>
+        <%= link_to "Sign Up", new_user_path %>
+        <%= link_to "Sign In", signin_path %>
+        <%= link_to "Log Out", logout_path %>
+    </div>
     <%= yield %>
-  </div>
+
+    
 
   </body>
 </html>
