--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,20 @@
-<h1>Hey, <%= @user.first_name %>!</h1>
-<p>Username: <%=@user.username %></p>
-<p>Email: <%= @user.email %></p>
+<div class="profile">
+    <h1>Hey, <%= @user.first_name %>!</h1>
+    <p>Username: <%=@user.username %></p>
+    <p>Email: <%= @user.email %></p>
+</div>
 
-
-
- 
-<%# for some reason the relationship between User and Restaurant isn't direct, it is reading the has_many_through relationship with inner join on Reviews %>
+<div class="restaurants">
+<% if @restaurants != nil %>
+    <ul>
+    <h3> Your Restaurant Submissions: </h3> <%# need to figure out how to have this display only if user has restaurants %>
+    <% @restaurants.each do |restaurant| %>
+        <% if restaurant.user_id == @user.id %> 
+        <li><%= link_to restaurant.name, restaurant_path(restaurant) %></li>
+        <% end %>
+    <% end %>
+    </ul>
+<% else %>
+        <p>You Have No Restaurant Submissions Yet</p>
+<% end %> 
+</div>
