--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,4 +30,11 @@
     
 
   </body>
+
+  <div class="footer">
+      <% if logged_in? %>
+        <p>Signed in as: <%= current_user.username %></p>
+      <% end %>
+  </div>
+
 </html>
