--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -8,9 +8,18 @@ div.profile {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-    border-style: solid;
-    border-width: 10px;
-    border-left-width: 10px;
-    border-right-width: 10px;
-    border-color: red;
+    text-align: center;
+    }
+
+    h1 {
+        display: block;
+        font-size: 2em;
+        text-align: center;
+        margin-block-start: 0.67em;
+        margin-block-end: 0.67em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        font-weight: bold;
+        padding-top: 70px;
+        padding-bottom: 10px;
     }
