--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,10 +1,10 @@
 <h1><%= @restaurant.name %></h1>
-<p>Description: <%= @restaurant.description %></p>
-<p>Address: <%= @restaurant.address %></p> 
-<p>State: <%= @restaurant.state.name %></p>
-<p>Phone Number: <%= @restaurant.phone_number %></p>
-<p>Vegan Friendliness Rating: <%= @restaurant.vegan_friendliness_rating %></p>
-<p>Price Rating: <%= @restaurant.price_rating %></p>
+<p><strong>Description:</strong> <%= @restaurant.description %></p>
+<p><strong>Address:</strong> <%= @restaurant.address %></p> 
+<p><strong>State:</strong> <%= @restaurant.state.name %></p>
+<p><strong>Phone Number:</strong> <%= @restaurant.phone_number %></p>
+<p><strong>Vegan Friendliness Rating:</strong> <%= @restaurant.vegan_friendliness_rating %></p>
+<p><strong>Price Rating:</strong> <%= @restaurant.price_rating %></p>
 
 
 <% if @restaurant.user_id == current_user.id %> 
