--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,10 +1,9 @@
 <% if @review.errors.any? %>
     <%= render partial: 'error', locals: { review: @review } %>
 
-<% elsif @restaurant.id == review.restaurant_id %>
+<% else @restaurant.id == review.restaurant_id %>
 
 <h3>Post a Review, <%= current_user.username %>:</h3>
-
 
 <%= form_for [ @restaurant, review ] do |f| %>
 
