--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,7 +1,13 @@
 <h1>Welcome To Vegan-Options!</h1>
-<p>Veganism often gets a bad wrap, but what it comes  down to is that it is one of the most  effective lifestyle changes an individual can make to reduce their impact on the environment. As an added  bonus, a plant-based diet also mitigates many of the health issues resulting  from the conventional-modern American diet. Although the vegan diet is becoming more widespread, it can still be difficult to  find restaurants with  vegan options, especially in some regions of the United States. This app will house a user generated list of vegan-friendly restaurants organized by state. Whether you are vegan or just looking for some plant-based options in your area, signup or login to access our user-generated database of vegan-friendly  restaurants! </p>
-
+<br>
+<img src="https://www.nutriplanet.org/wp-content/uploads/2019/09/AdobeStock_214597619-smaller-cropped-1500x1000.jpg" alt="Plant Based Diet" class="center">
+<br>
+<div class="limit">
+<p>Veganism often gets a bad wrap, but what it comes down to is that it is one of the most effective lifestyle changes an individual can make to reduce their impact on the environment. As an added bonus, a plant-based diet also mitigates many of the health issues resulting from the conventional-modern American diet. Although the vegan diet is becoming more mainstream, it can still be difficult to find restaurants with vegan options, especially in some regions of the United States. This app will house a user generated list of vegan-friendly restaurants organized by state. Whether you are vegan or just looking for some plant-based options in your area, signup or login to access our list of vegan-friendly restaurants! </p>
+<br>
 <%= link_to('Log in with Github!', '/auth/github') %>
+</div>
+
 
 
 
