--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -8,9 +8,11 @@
     <p><strong>Price Rating:</strong> <%= @restaurant.price_rating %></p>
 </div>
 
-<% if @restaurant.user_id == current_user.id %> 
-    <p><%= link_to "Edit Restaurant", edit_restaurant_path(@restaurant) %></p>
-<% end %>
+<div class="edit_restaurant">
+    <% if @restaurant.user_id == current_user.id %> 
+        <p><%= link_to "Edit Restaurant", edit_restaurant_path(@restaurant) %></p>
+    <% end %>
+</div>
  
 <div class="restaurant_reviews">
     <h3>Reviews (<%= @restaurant.reviews.size %>):</h3> 
