--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,3 @@
 <%= render 'form' %> 
 
-<%# maybe have to change this %>
+<%# maybe have to change this, don't want password to be able to be edited %>
