--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -5,7 +5,7 @@
 <div class="limit">
 <p>Veganism often gets a bad wrap, but what it comes down to is that it is one of the most effective lifestyle changes an individual can make to reduce their impact on the environment. As an added bonus, a plant-based diet also mitigates many of the health issues resulting from the conventional-modern American diet. Although the vegan diet is becoming more mainstream, it can still be difficult to find restaurants with vegan options, especially in some regions of the United States. This app will house a user generated list of vegan-friendly restaurants organized by state. Whether you are vegan or just looking for some plant-based options in your area, signup or login to access our list of vegan-friendly restaurants! </p>
 <br>
-<%= link_to('Log in with Github!', '/auth/github') %>
+<%= link_to 'Log in with Facebook!', '/auth/facebook' %>
 </div>
 
 
