--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -38,12 +38,13 @@
       <%= f.text_field :email, class: "form-control" %>
     </div>
     
-  
+    <% if !logged_in? %>
     <div class="form-group">
       <%= f.label :password, "Password:" %>
       <br>
       <%= f.password_field :password, class: "form-control" %>
     </div>
+    <% end %>
   
     <div class="actions">
       <br/>
