--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,6 +1,6 @@
 <h3>Editing Your Review, <%= current_user.username %>:</h3>
 
-<%= form_for [ @review ] do |f| %> <%# deleted @restaurant, from [@review] %>
+<%= form_for [ @review ] do |f| %> 
 
     <p>
       <%= f.text_area :body %>
@@ -12,4 +12,3 @@
 
 <%= link_to "Delete Review", review_path(@review), data: {:confirm => 'Are you sure?'}, :method => :delete %>
 
-<%# restaurant_review_path(@restaurant, @review) %>
