--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,19 +1,22 @@
 <% if @review.errors.any? %>
     <%= render partial: 'error', locals: { review: @review } %>
 
-<% else @restaurant.id == review.restaurant_id %>
+<% else %> 
+    <% @restaurant.id == review.restaurant_id %>
 
-<h3>Post a Review, <%= current_user.username %>:</h3>
+    <h3>Post a Review, <%= current_user.username %>:</h3>
 
-<%= form_for [ @restaurant, review ] do |f| %>
+    <%= form_for [ @restaurant, review ] do |f| %>
 
-    <p>
-      <%= f.text_area :body %>
-    </p>
-    <%= f.hidden_field :user_id, :value => current_user.id %>
-    <%= f.hidden_field :restaurant_id, :value => @restaurant.id %>
-    <p>
-      <%= f.submit 'Submit' %>
-    </p>
-<% end %>
+        <p>
+            <%= f.text_area :body %>
+        </p>
+
+        <%= f.hidden_field :user_id, :value => current_user.id %>
+        <%= f.hidden_field :restaurant_id, :value => @restaurant.id %>
+
+        <p>
+            <%= f.submit 'Submit' %>
+        </p>
+    <% end %>
 <% end %>
