worked on errors for user edit

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="profile">
     <h1>Hey, <%= @user.first_name %>!</h1>
-    <p>Username: <%=@user.username %></p>
-    <p>Email: <%= @user.email %></p>
+    <p><strong>Username:</strong> <%=@user.username %></p>
+    <p><strong>Email:</strong> <%= @user.email %></p>
 </div>
 
 <div class="edit_user">
