--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
           <br>
           <%= link_to  "Profile", user_path(current_user)%>
           <%= link_to "List of States", states_path %>
-          <%= link_to "Create Restaurant", new_restaurant_path %>
+          <%= link_to "Create Restaurant", new_user_restaurant_path(current_user) %>
           <%= link_to "Log Out", logout_path %>
         </div>
       <% elsif !logged_in? %>
