--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @restaurant do |f| %> 
+<%= form_for [current_user, @restaurant] do |f| %> 
 
     <% if @restaurant.errors.any? %>
     <div id="error_explanation">
