--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -10,6 +10,6 @@
 <% else %> 
     <div class="no_restaurants">
         <h2>No Restaurant Submissions for <%=@state.name%></h2>
-        <%= link_to 'Create Restaurant', new_restaurant_path %>
+        <%= link_to 'Create Restaurant', new_user_restaurant_path(current_user) %>
     </div>
 <% end %>
