fixed css and  views for restaurants,sessions, and users

--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,5 +1,18 @@
 <% if @review.errors.any? %>
-    <%= render partial: 'error', locals: { review: @review } %>
+    
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:
+      </h2>
+
+      <ul>
+      <% @review.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+
+      <%= link_to "Try Again", restaurant_path(@review.restaurant) %>
+    </div>
 
 <% else %> 
     <% @restaurant.id == review.restaurant_id %>
