--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -10,7 +10,7 @@
 
 <div class="edit_restaurant">
     <% if @restaurant.user_id == current_user.id %> 
-        <p><%= link_to "Edit Restaurant", edit_user_restaurant_path(current_user, @restaurant) %></p>
+        <p><%= link_to "Edit Restaurant", edit_restaurant_path(@restaurant) %></p>
     <% end %>
 </div>
  
