worked on restaurant edit view

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -195,6 +195,7 @@
     .footer {
         position: fixed;
         left: 0;
+        right: 0;
         bottom: 0;
         width: 100%;
         background-color: rgb(88, 88, 146);
