added are you sure to delete restauraant

--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -65,4 +65,4 @@
 <% end %> 
 
     
-<p><%= link_to "Delete Restaurant", delete_restaurant_path(@restaurant) %></p>
+<p><%= link_to "Delete Restaurant", delete_restaurant_path(@restaurant), data: {:confirm => 'Are you sure?'} %></p>
