added scope method with URL functionality

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
 <% if @restaurants != nil %>
     <ul>
     <h3> Your Restaurant Submissions: </h3> 
-    <% @restaurants.each do |restaurant| %>
+    <% @restaurants.sort_alphabetical.each do |restaurant| %>
         <% if restaurant.user_id == @user.id %> 
             <li><%= link_to restaurant.name, restaurant_path(restaurant) %></li>
         <% end %>
