--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to 'Best Vegan Rated Restaurants', restaurants_good_vegan_rating_path %>
+
 <div class="states_index">
 <h1> States Index </h1>
 <ul>
@@ -6,3 +8,4 @@
 <% end %>
 </ul>
 </div>
+
