--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -34,3 +34,15 @@ div.edit_user {
     transform: translate(-50%, -50%);
     text-align: center;
 }
+
+div.best_vegan_restaurants {
+    height: 10em;
+    position: relative;
+    margin: 0;
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
