removed repetitive code from views

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
     <% end %>
     </ul>
 <% else %>
-        <p>Be the First to Submit a Restaurant!</p>
+        <h3>Be the First to Submit a Restaurant!</h3>
 <% end %> 
 </div>
 
