added restaurant search bar feature to states index page

--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -1,3 +1,8 @@
+
+<div class="search_restaurant">
+    <%= render partial: 'restaurants/search' %>
+</div>  
+
 <div class="states_index">
 <h1> States Index </h1>
 <ul>
