--- a/app/assets/stylesheets/states.css
+++ b/app/assets/stylesheets/states.css
@@ -1,3 +1,12 @@
 div.states_index {
-    margin-top: 8%;
+    margin-top: 5px;
+
+}
+
+div.search_restaurant form {
+    padding-top: 30px;
+}
+
+div.states_index h1 {
+    padding-top: 0px;
 }
