--- a/app/views/restaurants/_search.html.erb
+++ b/app/views/restaurants/_search.html.erb
@@ -1,4 +1,4 @@
-    <h3>Search Restaurants</h3>
+    <h3>Search Restaurants:</h3>
     
     <%= form_for(states_path, method: "get") do %>
         
