--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,9 @@
       <% elsif !logged_in? %>
       <div class="nav">
           <br>
+          <%= link_to "Home", root_path %>
           <%= link_to "Sign Up", new_user_path %>
           <%= link_to "Sign In", signin_path %>
-          <%= link_to "Log Out", logout_path %>
       </div>
       <% end %>
 
