--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,14 +1,7 @@
 <h3>Editing Your Review, <%= current_user.username %>:</h3>
-
 <%= form_for [ @review ] do |f| %> 
-
-    <p>
-      <%= f.text_area :body %>
-    </p>
-    <p>
-      <%= f.submit 'Submit' %>
-    </p>
+  <p> <%= f.text_area :body %> </p>
+  <p> <%= f.submit 'Submit' %> </p>
 <% end %>
-
 <%= link_to "Delete Review", review_path(@review), data: {:confirm => 'Are you sure?'}, :method => :delete %>
 
